# FlashLogger

./: CMakeLists.txt  README.md  build.sh  build_static.sh  main.cpp  utils.cmake
docs/: BasicCompileProcedure.md  cpp_singleton.md  valgrind_analysis.md
src/: test.cpp
src/Benchmark/: AsynLoggerBenchmark.cpp  AsynLoggerBenchmark.md  ThreadPoolBenchmark.cpp  ThreadPoolBenchmark.md  TimeFunctionBenchmark.cpp  TimeFunctionBenchmark.md
src/Logger/: AsynLogger.cpp  AsynLogger.h  Buffer.h  CMakeLists.txt  FileWriter.cpp  FileWriter.h  LogConfig.h  LogFile.cpp  LogFile.h  Logger.cpp  Logger.h
src/ThreadPool/: CMakeLists.txt  ConcurrentQueue.h  ThreadPool.cpp  ThreadPool.h
src/Utils/: CMakeLists.txt  SpinLock.h  tscns.h
