SET(UTILS_SRC tscns.h)

ADD_LIBRARY(Utils STATIC ${UTILS_SRC})

file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
INSTALL(FILES ${HEADERS} DESTINATION include/lyf/Utils)
INSTALL(TARGETS Utils Utils LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

SET_TARGET_PROPERTIES(Utils PROPERTIES  OUTPUT_NAME "Utils")
SET_TARGET_PROPERTIES(Utils PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(Utils PROPERTIES LINKER_LANGUAGE CXX) #packge下面没有c\cpp文件时要声明linkder language